import/export: import and export "route" option (bgo #753578)

We do not allow openvpn to configure routes (--routes-noexec), but let's
configure these static routes in ipv4 setting.

https://bugzilla.gnome.org/show_bug.cgi?id=753578